Community pages,signup pages added

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -23,7 +23,7 @@
                 <div class="footer__menu">
                     <p class="small bold">Company</p>
                     <ul>
-                        <li><a href="#">About</a></li>
+                        <li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="{% url 'problem_statements' %}">Problem Statements</a></li>
                         <li><a href="{% url 'projects' %}">Projects</a></li>
                         <li><a href="{% url 'community' %}">Community</a></li>
