--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+{% block js %}{% endblock %}
 
 </body>
 </html>
