--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -18,11 +18,16 @@
             <div class="main">
                 <section id="contents">
                     <form class="site-form" action="" method="post">
+                        <div class="form-field">
                             {%csrf_token%}
-                            {{form.as_p}}
+                            {{form}}
+                        </div>
                             
                             
-                            <input type="submit" class="btn btn-success" value="Register">
+                            
+                        <div class="btn-outer">
+                            <input class="btn btn--info btn--full"  type ="submit" value="Submit">
+                        </div>
                     </form>
                 </section>
                 <aside id="sidebar">
