Donate and contact page added

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -39,7 +39,7 @@
                                 <div class="hfc-card__info">
                                     <h3>Want to set up HFC Centre in your college?</h3>
                                     <p class="small">Lorem ipsum dolor sit amet, affert qualisque efficiendvim at, per cuagam eruditi. Ius an duis</p>
-                                    <a href="#" class="btn btn--info">Contact Us</a>
+                                    <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                                 </div>
                         </div>    
                     </section>
@@ -98,7 +98,7 @@
                             <div class="hfc-card__info">
                                 <h3>Want to set up HFC Centre in your college?</h3>
                                 <p class="small">Lorem ipsum dolor sit amet, affert qualisque efficiendvim at, per cuagam eruditi. Ius an duis</p>
-                                <a href="#" class="btn btn--info">Contact Us</a>
+                                <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                             </div>
                         </div>
                     </section>
