--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -14,7 +14,7 @@
             <div class="banner__main">
                 <h1>Problem Statements</h1>
                 <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
-                <a class="btn btn--info" href="#">Suggest a Problem Statement</a>
+                <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a Problem Statement</a>
             </div>
         </div>
     </div>
