--- a/templates/HFC/thanks.html
+++ b/templates/HFC/thanks.html
@@ -1,16 +1,6 @@
-{% include 'HFC/layout.html' %}
-<!DOCTYPE html>
-<html>
+{% extends 'HFC/layout.html' %}
 
-    <head>
-        <title></title>
-        
-    </head>
-
-    <body>
             
-            {% block body %}
+{% block main %}
             <h3>Thank you </h3>
-            {%endblock%}
-            </body>
-            </html>
+{%endblock%}
