--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -55,6 +55,7 @@
                     </div>
                 </section>
                 <section id="ourMission">
+                        <a name="ourMission">
                     <div class="mission-outer">
                         <h2 class="underline">Coders/Software Engineers</h2>
                         <div class="mission__sec">
@@ -81,7 +82,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia  deserunt mollit anim id est laborum.</p>
                             </div>
                         </div>
-                    </div>
+                    </div></a>
                 </section>
                 <section id="howItWorks">
                     <div class="howItWorks-outer">
