--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -38,7 +38,7 @@
             </section><!--contents -->
               <aside id="sidebar">
                     <div class="sidebar__list">
-                            <p>Explore Problem Statement across various issue areas</p>
+                            <p>Explore problem statement across various issue areas</p>
                                 <ul>
                                     {% for prob_list in all_problems %}
                                     <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
