--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -39,23 +39,23 @@
                 <div class="footer__menu">
                     <p class="small bold">Get In Touch</p>
                     <address>402 Abhis Hiranya <br>Kavuri Hills, Madhapur <br>Hyderabad - 500 033</address>
-                    <p><a href="mailto:contact@hackforchange.co"><i class="fas fa-envelope"></i>contact@hackforchange.co</a></p>
-                    <p><a href="tel:+04090062872"><i class="fas fa-phone-alt"></i>+040 90062872</a></p>
+                    <p><a href="mailto:contact@hackforchange.co"><i> <img width="24" src="{% static 'images/envelope-icon-w.svg' %}" alt="icon"></i>contact@hackforchange.co</a></p>
+                    <p><a href="tel:+04090062872"><i><img width="19" src="{% static 'images/phone-icon-w.svg' %}" alt="icon"></i>+040 90062872</a></p>
                 </div>
             </div>
             <div class="footer__right">
                 <p class="small bold">Social Media</p>
                 <ul>
-                    <li><a href="#"><img width="30" src="{% static 'images/facebook-icon.png' %}" alt="Icon"></a></li>
-                    <li><a href="#"><img width="35" src="{% static 'images/insta-icon.png' %}" alt="Icon"></a></li>
-                    <li><a href="#"><img width="31" src="{% static 'images/linkedin-icon.png' %}" alt="Icon"></a></li>
+                    <li><a href="#"><img width="30" src="{% static 'images/facebook-icon.svg' %}" alt="Icon"></a></li>
+                    <li><a href="#"><img width="35" src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
+                    <li><a href="#"><img width="31" src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
                 </ul>
                 <a href="{% url 'donate' %}" class="btn btn--border">Donate</a>
             </div>
         </footer>
         <footer class="footer__copyright">
             <div class="copyright__left">
-                <p>An Initiative By<a href="#"><img width="171" src="{% static 'images/ctsc-logo.png' %}" alt="logo"></a></p>
+                <p>An Initiative By<a href="#"><img width="171" src="{% static 'images/ctsc-logo.svg' %}" alt="logo"></a></p>
             </div>
             <div class="copyright__right">© Copyright @HackForChange 2020</div>
         </footer>
