--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -15,7 +15,7 @@
     <div class="content-width">
         <div class="home-banner">
             <div class="home-banner__right">
-                <img src="{% static 'images/developer-team-2043022-0.png' %}" srcset="images/developer-team-2043022-0@2x.png 2x, images/developer-team-2043022-0@3x.png 3x " alt="Pic">
+                <img src="{% static 'images/developer-team-2043022-0.svg' %}" srcset="images/developer-team-2043022-0@2x.png 2x, images/developer-team-2043022-0@3x.png 3x " alt="Pic">
             </div>
             <div class="home-banner__left">
                 <h1>Lorem ipsum dolor sit amet consectetur adipiscing elit</h1>
@@ -55,21 +55,21 @@
                     <div class="contribute__info">
                         <h4>Coders/Software Engineers</h4>
                         <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
-                        <img src="{% static 'images/undraw_code_typing_7jnv.png' %}" srcset="images/undraw_code_typing_7jnv@2x.png 2x, images/undraw_code_typing_7jnv@3x.png 3x" alt="Pic">
+                        <img src="{% static 'images/undraw_code_typing_7jnv.svg' %}" srcset="images/undraw_code_typing_7jnv@2x.png 2x, images/undraw_code_typing_7jnv@3x.png 3x" alt="Pic">
                     </div>
                 </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
                         <h4>Working Professionals</h4>
                         <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
-                        <img width="238" src="{% static 'images/contribute-img2.jpg' %}" alt="Pic">
+                        <img width="238" src="{% static 'images/contribute-img2.svg' %}" alt="Pic">
                     </div>
                     </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
                         <h4>Mentors</h4>
                         <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
-                        <img src="{% static 'images/undraw_online_learning_ao11.png' %}" srcset="images/undraw_online_learning_ao11@2x.png 2x, images/undraw_online_learning_ao11@3x.png 3x" alt="Pic">
+                        <img src="{% static 'images/undraw_online_learning_ao11.svg' %}" srcset="images/undraw_online_learning_ao11@2x.png 2x, images/undraw_online_learning_ao11@3x.png 3x" alt="Pic">
                     </div>
                 </div>
             </div>
@@ -93,9 +93,9 @@
             <h2 class="underline">Who We Work With?</h2>
             <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
             <div class="we-work__sec">
-                <div class="we-work__fig"><img src="{% static 'images/faq-logo.png' %}" srcset="images/faq-logo@2x.png 2x, images/faq-logo@3x.png 3x"></div>
-                <div class="we-work__fig"><img src="{% static 'images/fdr-logo.png' %}" srcset="images/fdr-logo@2x.png 2x, images/fdr-logo@3x.png 3x"></div>
-                <div class="we-work__fig"><img src="{% static 'images/md-logo.png' %}" srcset="images/md-logo@2x.png 2x, images/md-logo@3x.png 3x"></div>
+                <div class="we-work__fig"><img src="{% static 'images/faq-logo.svg' %}" srcset="images/faq-logo@2x.png 2x, images/faq-logo@3x.png 3x"></div>
+                <div class="we-work__fig"><img src="{% static 'images/fdr-logo.svg' %}" srcset="images/fdr-logo@2x.png 2x, images/fdr-logo@3x.png 3x"></div>
+                <div class="we-work__fig"><img src="{% static 'images/md-logo.svg' %}" srcset="images/md-logo@2x.png 2x, images/md-logo@3x.png 3x"></div>
             </div>
             <p>Does your non-profit want to work with Hack For Change? <a href="{% url 'contact' %}">Send us a note</a></p>
         </div>
