--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -29,7 +29,7 @@
                         </ul>
                     </div>
                     <div class="leader-skill__right">
-                        <img src="{% static 'images/undraw_candidate_ubwv.png' %}" srcset="images/undraw_candidate_ubwv@2x.png 2x, images/undraw_candidate_ubwv@3x.png 3x">
+                        <img src="{% static 'images/undraw_candidate_ubwv.svg' %}" srcset="images/undraw_candidate_ubwv@2x.png 2x, images/undraw_candidate_ubwv@3x.png 3x">
                     </div>
                 </div>
                 <form  class="site-form" method="post" id="volform" sub-change-url="{% url 'load_area_of_expertise' %}" >
