--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -18,9 +18,9 @@
 <div id="main-wrap" class="main-wrap--pdb">
         <div class="content-width">
             <ul class="tab-sec">
-                <li class="active"><a href="#aboutUs"><img width="24" src="{% static 'images/aboutus-icon.jpg' %}" alt="ICON"><img width="24" src="{% static 'images/aboutus-icon-alt.jpg' %}" alt="ICON"><span>About Us</span></a></li>
-                <li><a href="#ourMission"><img width="23" src="{% static 'images/our-mission-icon.jpg' %}" alt="ICON"><img width="23" src="{% static 'images/our-mission-icon-alt.jpg' %}" alt="ICON"><span>Our Mission</span></a></li>
-                <li><a href="#howItWorks"><img width="25" src="{% static 'images/hiw-icon.jpg' %}" alt="ICON"><img width="25" src="{% static 'images/hiw-icon-alt.jpg' %}" alt="ICON"><span>How it Works</span></a></li>
+                <li class="active"><a href="#aboutUs"><img width="24" src="{% static 'images/aboutus-icon.svg' %}" alt="ICON"><img width="24" src="{% static 'images/aboutus-icon-alt.svg' %}" alt="ICON"><span>About Us</span></a></li>
+                <li><a href="#ourMission"><img width="23" src="{% static 'images/our-mission-icon.svg' %}" alt="ICON"><img width="23" src="{% static 'images/our-mission-icon-alt.svg' %}" alt="ICON"><span>Our Mission</span></a></li>
+                <li><a href="#howItWorks"><img width="25" src="{% static 'images/hiw-icon.svg' %}" alt="ICON"><img width="25" src="{% static 'images/hiw-icon-alt.svg' %}" alt="ICON"><span>How it Works</span></a></li>
             </ul>
             <div class="hfc-outer">
                 <section class="active" id="aboutUs">
@@ -89,7 +89,7 @@
                         <div class="howItWorks__sec">
                             <div class="howItWorks__fig">
                                 <span>1</span>
-                                <img width="278" src="{% static 'images/undraw_Questions_re_1fy7.png' %}" srcset="images/undraw_Questions_re_1fy7@2x.png 2x, images/undraw_Questions_re_1fy7@3x.png 3x">
+                                <img width="278" src="{% static 'images/undraw_Questions_re_1fy7.svg' %}" srcset="images/undraw_Questions_re_1fy7@2x.png 2x, images/undraw_Questions_re_1fy7@3x.png 3x">
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
@@ -101,7 +101,7 @@
                         <div class="howItWorks__sec">
                             <div class="howItWorks__fig">
                                 <span>2</span>
-                                <img width="288" src="{% static 'images/undraw_shared_goals_3d12.png' %}" srcset="images/undraw_shared_goals_3d12@2x.png 2x, images/undraw_shared_goals_3d12@3x.png 3x">
+                                <img width="288" src="{% static 'images/undraw_shared_goals_3d12.svg' %}" srcset="images/undraw_shared_goals_3d12@2x.png 2x, images/undraw_shared_goals_3d12@3x.png 3x">
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
@@ -113,7 +113,7 @@
                         <div class="howItWorks__sec">
                             <div class="howItWorks__fig">
                                 <span>3</span>
-                                <img width="282" src="{% static 'images/undraw_meet_the_team_e5b7.png' %}" srcset="images/undraw_meet_the_team_e5b7@2x.png 2x, images/undraw_meet_the_team_e5b7@3x.png 3x">
+                                <img width="282" src="{% static 'images/undraw_meet_the_team_e5b7.svg' %}" srcset="images/undraw_meet_the_team_e5b7@2x.png 2x, images/undraw_meet_the_team_e5b7@3x.png 3x">
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
@@ -125,7 +125,7 @@
                         <div class="howItWorks__sec">
                             <div class="howItWorks__fig">
                                 <span>4</span>
-                                <img width="325" src="{% static 'images/undraw_shared_workspace_hwky.png' %}" srcset="images/undraw_shared_workspace_hwky@2x.png 2x, images/undraw_shared_workspace_hwky@3x.png 3x">
+                                <img width="325" src="{% static 'images/undraw_shared_workspace_hwky.svg' %}" srcset="images/undraw_shared_workspace_hwky@2x.png 2x, images/undraw_shared_workspace_hwky@3x.png 3x">
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
@@ -137,7 +137,7 @@
                         <div class="howItWorks__sec">
                             <div class="howItWorks__fig">
                                 <span>5</span>
-                                <img width="295" src="{% static 'images/undraw_maker_launch_crhe.png' %}" srcset="images/undraw_maker_launch_crhe@2x.png 2x, images/undraw_maker_launch_crhe@3x.png 3x">
+                                <img width="295" src="{% static 'images/undraw_maker_launch_crhe.svg' %}" srcset="images/undraw_maker_launch_crhe@2x.png 2x, images/undraw_maker_launch_crhe@3x.png 3x">
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
