--- a/templates/HFC/contact.html
+++ b/templates/HFC/contact.html
@@ -3,7 +3,7 @@
 {% block title %} Contact Us {% endblock %}
 {% block main %}
 <!--Banner start -->
-<div class="banner-wrap">
+<div class="banner-wrap banner-wrap--dotInside">
         <div class="content-width sm-content-width">
             <div class="banner__main banner__main--upper">
                 <h1>Get in Touch</h1>
@@ -44,7 +44,7 @@
                                 <p><a href="mailto:contact@hackforchange.co"><i class="fas fa-envelope"></i>contact@hackforchange.co</a></p>
                                 <p><a href="tel:+919963362872"><i class="fas fa-phone-alt"></i>+91 99633 62872</a></p>
                             </div>
-                            <img width="288" src="{% static 'images/email-campaign-rafiki.png' %}" srcset="images/email-campaign-rafiki@2x.png 2x, images/email-campaign-rafiki@3x.png 3x">
+                            <img width="288" src="{% static 'images/email-campaign-rafiki.svg' %}" srcset="images/email-campaign-rafiki@2x.png 2x, images/email-campaign-rafiki@3x.png 3x">
                         </div>
                     </aside><!--sidebar -->
                 </div>
