--- a/templates/HFC/donate.html
+++ b/templates/HFC/donate.html
@@ -3,7 +3,7 @@
 {% block title %} Donate {% endblock %}
 {% block main %}
 <!--Banner start -->
-<div class="banner-wrap">
+<div class="banner-wrap banner-wrap--dotInside">
         <div class="content-width sm-content-width">
             <div class="banner__main banner__main--upper banner__main--donate">
                 <h1>Make a Donation</h1>
