--- a/templates/HFC/thanks.html
+++ b/templates/HFC/thanks.html
@@ -1,6 +1,19 @@
 {% extends 'HFC/layout.html' %}
-
-            
+{% load static %}
+{% block title %} Thanks {% endblock %}
 {% block main %}
-            <h3>Thank you </h3>
+<!-- Main starts -->
+<div class="content-width">
+        <div class="thanku-main">
+            <div class="thanku-main-img">
+                <img src="{% static 'images/thank-you-img.svg' %}"> 
+            </div>
+            <div class="thanku-heading">
+               <h2>Thanks for signing up.<br>
+                We will get back to you shortly!!!</h2>
+               <a class="btn btn--info" href="{% url 'home' %}">Go Home</a> 
+           </div>
+        </div>
+    </div>
+<!-- Main Ends -->
 {%endblock%}
