--- a/templates/andablog/base.html
+++ b/templates/andablog/base.html
@@ -9,7 +9,7 @@
 
 {% block head_styles %}
     {% block andablog_head_extra %}
-    <link rel="stylesheet" href="{% static 'css/andablog.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
 {% endblock %}
 
