--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -50,7 +50,8 @@
             </div>
         </div>
         <!--header end -->
-{% block main %}   {% endblock %}
+{% block main %}  
+{% endblock %}
 {% include 'HFC/footer.html' %}
 </div><!--container-fluid -->
 
@@ -60,6 +61,7 @@
 <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+{%block css %}{%endblock%}
 {% block js %}{% endblock %}
 
 </body>
